src/blog/local.css
/* ... */
/**
 * 1. Add the correct display in IE 9-.
 * 2. Add the correct vertical alignment in Chrome, Firefox, and Opera.
 */

progress {
  display: inline-block; /* 1 */
  vertical-align: baseline; /* 2 */
}

/**
 * Remove the default vertical scrollbar in IE.
 */

textarea {
  overflow: auto;
}

/**
 * 1. Add the correct box sizing in IE 10-.
 * 2. Remove the padding in IE 10-.
 */

[type="checkbox"],
[type="radio"] {
  box-sizing: border-box; /* 1 */
  padding: 0; /* 2 */
}

/**
 * Correct the cursor style of increment and decrement buttons in Chrome.
 */

[type="number"]::-webkit-inner-spin-button,
[type="number"]::-webkit-outer-spin-button {
  height: auto;
}

/**
 * 1. Correct the odd appearance in Chrome and Safari.
 * 2. Correct the outline style in Safari.
 */

[type="search"] {
  -webkit-appearance: textfield; /* 1 */
  outline-offset: -2px; /* 2 */
}

/**
 * Remove the inner padding and cancel buttons in Chrome and Safari on OS X.
 */

[type="search"]::-webkit-search-cancel-button,
[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

/**
 * 1. Correct the inability to style clickable types in iOS and Safari.
 * 2. Change font properties to `inherit` in Safari.
 */

::-webkit-file-upload-button {
  -webkit-appearance: button; /* 1 */
  font: inherit; /* 2 */
}

/* Interactive
   ========================================================================== */

/*
 * Add the correct display in IE 9-.
 * 1. Add the correct display in Edge, IE, and Firefox.
 */

details, /* 1 */
menu {
  display: block;
}

/*
 * Add the correct display in all browsers.
 */

summary {
  display: list-item;
}

/* Scripting
   ========================================================================== */

/**
 * Add the correct display in IE 9-.
 */

canvas {
  display: inline-block;
}

/**
 * Add the correct display in IE.
 */

template {
  display: none;
}

/* Hidden
   ========================================================================== */

/**
 * Add the correct display in IE 10-.
 */

[hidden] {
  display: none;
}

/*
 * Standard Base
 * ===================================== */

* {
    box-sizing: border-box;
}

body {
    font-size: 1.2em;
    line-height: 1.75em;
    color: rgba(0, 0, 0, 0.8);
    overflow-y: scroll;
    text-rendering: optimizeLegibility;
    word-wrap: break-word;

    font-variant-ligatures: common-ligatures additionalligatures;

    -webkit-font-feature-settings: "liga";
       -moz-font-feature-settings: "liga=1, dlig=0";
        -ms-font-feature-settings: "liga";
         -o-font-feature-settings: "liga";
            font-feature-settings: "liga";

    -webkit-font-smoothing: antialiased;
}
/* Higlighter colors */
::selection {
  background: #c0f541;
  text-shadow: none;
}
::-moz-selection {
  background: #c0f541;
  text-shadow: none;
}

th,
strong {
    color: black;
}

ol,
ul {
    padding: 0;
}

ul {
    list-style-type: disc;
    list-style-image: url(data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%0A%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20version%3D%221.1%22%20width%3D%225%22%20height%3D%2213%22%3E%0A%3Ccircle%20cx%3D%222.5%22%20cy%3D%229.5%22%20r%3D%222.5%22%20fill%3D%22%2300528c%22%2F%3E%0A%3C%2Fsvg%3E%0A);
    list-style-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAANCAIAAADuXjPfAAAABnRSTlMA/wD/AP83WBt9AAAAHklEQVR4AWP4jwrowWcI6oEgEBtIISNCfFT9mOYDACO/lbNIGC/yAAAAAElFTkSuQmCC);
}

ol ol,
ol ul,
ul ol,
ul ul {
    padding-left: 1.5em;
    margin: 0 auto;
}

img {
    max-width: 100%;
}

h1,
h2 {}

h1 {
    font-size: 1.25em;
    line-height: 1.5em;
}

h2 {
    font-size: 1em;
    line-height: 1.5em;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    -webkit-font-feature-settings: "kern" 1, "liga" 1, "swsh" 1;
       -moz-font-feature-settings: "kern=1, liga=1, swsh=1";
        -ms-font-feature-settings: "kern" 1, "liga" 1, "swsh" 1;
         -o-font-feature-settings: "kern" 1, "liga" 1, "swsh" 1;
            font-feature-settings: "kern" 1, "liga" 1, "swsh" 1;
}

h2 a {
    display: none;
}

h2:hover a {
    display: inline;
}

a:link,
a:active,
a:visited,
a:hover {
    text-decoration: none;
}

a:hover {
    color: #06c;
    text-decoration: underline\9;
    text-shadow: 2px 0 0 #fefefe, -2px 0 0 #fefefe;
    background-image: -webkit-gradient(linear, left top, right top, from(currentColor), to(currentColor));
    background-image: -webkit-linear-gradient(left, currentColor 0%, currentColor 100%);
    background-image:      -o-linear-gradient(left, currentColor 0%, currentColor 100%);
    background-image:      -o-linear-gradient(left, currentColor 0%, currentColor 100%);
    background-image:         linear-gradient(to right, currentColor 0%, currentColor 100%);
    background-repeat: repeat-x;
    background-position: 0 90%;
    -webkit-background-size: 100% 1px;
            background-size: 100% 1px;

}

a:link { color: #3498DB; }
a:visited { color: #6a4c96; }

a[href*="//"]:not([href*="tylercipriani.com"]) {
    break-after: avoid;
}

a[href*="//"]:not([href*="tylercipriani.com"]):after {
    content: "\0000a0" url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAVklEQVR4Xn3PgQkAMQhDUXfqTu7kTtkpd5RA8AInfArtQ2iRXFWT2QedAfttj2FsPIOE1eCOlEuoWWjgzYaB/IkeGOrxXhqB+uA9Bfcm0lAZuh+YIeAD+cAqSz4kCMUAAAAASUVORK5CYII=);
}

blockquote {
    padding: 1em;
    margin: 1em 0;
    border-left: 2px solid rgba(100, 100, 150, 1);
    color: rgba(0, 0, 0, 0.6);
    font-style: italic;
}

/*
blockquote a {
    text-shadow: 2px 0 0 #ffe, -2px 0 0 #ffe;
}
*/

code {
    padding: 0.2em 0;
    white-space: no-wrap;
    color: #555;
    background: rgba(0, 0, 0, 0.05);
    font-size: 85%;

    -webkit-border-radius: .2em;
       -moz-border-radius: .2em;
        -ms-border-radius: .2em;
         -o-border-radius: .2em;
            border-radius: .2em;
}

code:before,
code:after {
    letter-spacing: -0.2em;
    content: "\00a0";
}
/* ... */

